<resources>
    <string name="app_name">RampUp</string>
    <string name="btnActivityLifeCycle">Activity LifeCycle</string>
    <string name="btnFragmentLifeCycle">Fragment LifeCycle</string>
    <string name="tvActivityStatus">Activity Status</string>
    <string name="ActivityLifeCycleWithNoBind">Activity LifeCycle with NoBinding</string>
    <string name="btnLifecycle">Lifecycle Stages Demo</string>
    <string name="tvLifecycle">LifeCycle No Bind</string>
    <string name="tvFragment">Fragments contains inside the activity if we click the button fragment it has to display the fragment</string>
    <string name="fragButton">FRAGMENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tvFirst">......Displaying first fragment.....</string>
    <string name="tvSecond">Displaying second fragment</string>
    <string name="clickButton">CLICK HERE</string>
    <string name="firstfrag">First Fragment</string>
    <string name="secondfrag">.......Second Fragment ......
        ......Displayed......
        ......here.....
        .</string>
    <string name="FragFirstButton">FirstFragment</string>
    <string name="FragSecondButton">SecondFragment</string>
    <string name="intentsButton">Intents</string>
    <string name="click">Click Here</string>
    <string name="editTextHint">Type here</string>
    <string name="implicit">First Activity</string>
    <string name="explicitButton">Explicit Button</string>
    <string name="secondActivity">Second Activity</string>
    <string name="explicitEditTextHint">type name</string>
    <string name="phoneHint">type Phone no</string>
    <string name="scoreHint">type marks</string>
    <string name="TrueOrNot">true or false</string>
    <string name="send">Send</string>
    <string name="submit_button">ADD</string>
    <string name="hintOfDetails">type name here </string>
    <string name="hintOfPhoneNo">EnterPhoneNumber</string>
    <string name="view_text">nameview</string>
    <string name="delete_button">delete</string>
    <string name="addButton">Add</string>
    <string name="view_number">numberview</string>
    <string name="recycle">RecyclerView - Shared Preference</string>
    <string name="sharedButton">Shared Preferences</string>
    <string name="shareHint"></string>
    <string name="Services">Services</string>
    <string name="startService">Background Service - Playing music</string>
    <string name="text">Services in Android</string>
    <string name="start">Start Service</string>
    <string name="stop">stop Service</string>
    <string name="recyclerView">RecyclerView</string>
    <string name="boundServiceButton">BoundService</string>
</resources>