<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnActivityLifeCycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lightBlue"
            android:text="@string/btnActivityLifeCycle"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/btnFragmentLifeCycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/btnActivityLifeCycle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFragmentLifeCycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lightBlue"
            android:text="@string/btnFragmentLifeCycle"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/btnActivityLifeCycleNoBind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnActivityLifeCycle"
            tools:text="@string/btnFragmentLifeCycle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnActivityLifeCycleNoBind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lightBlue"
            android:text="@string/ActivityLifeCycleWithNoBind"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFragmentLifeCycle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lightBlue"
            android:text="@string/intentsButton"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnActivityLifeCycleNoBind"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/intentButton"
            android:background="@color/lightBlue"
            >
        </androidx.appcompat.widget.AppCompatButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
